--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,7 +6,7 @@ $container-large-desktop: 720px + 30px;
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 // google fonts
-@import url(http://fonts.googleapis.com/css?family=Bitter:400,400italic,700&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Bitter:400,400italic,700&subset=latin,latin-ext);
 /* variables */
 
 $color-green: #239981;
